analytics/metabase/k8s/base/service.yaml
---
# metabase/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    flexwiz.io/app: metabase
